added store to the swagger documentation
